# MATILDA.FT

src/: Compute.cu  Compute_bennet.cu  Compute_bennet.h  device_array_utils.cu  device_ms_utils.cu  forces.cu  globals.h  interaction_graph.ipynb  main.cu  makefile  read_input.cu  tensor_potential_MaierSaupe.cu  tensor_potential_MaierSaupe.h  tensor_potential_MaierSaupe_eigenvalue.cpp
utils/post-proc/: dump-grid-densities  dump-grid-densities.cpp
utils/post-proc/calc-sk/: calc-sk-per-frame  makefile
utils/post-proc/curvature-calc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  curvature-calc.cpp
